src/css/settimes_style.css
body {
	font-family: Helvetica, sans-serif;
	font-size: 16px;
	background-color: whitesmoke;
	display: flex;
	flex-direction: column;
	align-items: left;
    margin: 0px;
    padding: 0px;
    
}

body > div {
    padding-left: 60px;
    padding-right: 60px;
}

#header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 10px;
}

#weekdayForm {
    display: grid;
    grid-template-columns: auto 300px;
}


#btnOk {
    grid-column: 2;
    grid-row: 1 /span 3;
    margin: 20px;
    font-size: 32px;
}
#btnCancel {
    grid-column: 2;
    grid-row: 4 /span 3;
    margin: 20px;
    font-size: 32px;
}



#descriptions {
    display: flex;
    flex-direction: row;
}

#descriptions p {
    width: 150px;
    text-align: center;
    margin-bottom: 0px;
    margin-top: 0px;
}



.dayDiv {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    background-color: lightgrey;
    margin-bottom: 5px;
}

.dayDiv input {
    width: 150px;
    text-align: center;
    font-size: 16px;
}

.theDay {
    width: 150px;
    text-align: center;
    font-size: 16px;
}


.dayDiv button {
    margin-left: 20px;
}



#btnLogout {
    font-size: 24px;
    margin-top: 10px;
    margin-right: 50px;
    width: 150px;

}

